--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,3 +34,7 @@ tempfile = "3.8"
 [[example]]
 name = "basic_usage"
 path = "examples/basic_usage.rs"
+
+[[example]]
+name = "build_time_randomization"
+path = "examples/build_time_randomization.rs"
